--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,9 @@ android {
 dependencies {
   def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
     compile 'com.facebook.react:react-native:+'
-    compile "com.google.android.gms:play-services-analytics:$googlePlayServicesVersion"
-
+    compile 'com.facebook.react:react-native:+'
+    compile 'com.android.support:multidex:1.0.3'
+    compile 'com.google.firebase:firebase-messaging:12.0.1'
+    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.android.gms:play-services-analytics:12.0.1'
 }
